Bug 386748 - Warning on Startup: NS_ENSURE_TRUE(compMgr) failed. r=benjamin, a1.9=schrep